kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-deployment
  namespace: garion-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: final-deployment
    spec:
      containers:
        - name: final-deployment
          image: garioncox/garion-final:${IMAGE_TAG}
          ports:
            - containerPort: 5137
          readinessProbe:
            httpGet:
              path: /
              port: 5137
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5137
            initialDelaySeconds: 15
            periodSeconds: 20
